--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -24,3 +24,7 @@ spring.thymeleaf.prefix=classpath:/templates/
 # 在构建 URL 时添加到视图名称后的后缀（默认值： .html ）
 spring.thymeleaf.suffix=.html
 
+
+zookeeper:
+zookeeper.address=81.69.23.250:2181
+timeout=4000
